Business focused home page

--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Consultancy services"
-slug: "business/index.html"
+slug: "/"
 publish: true
 ---
 import ContactLink from "components/contact-link"
