--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -1,5 +1,5 @@
 ---
-title: "About"
+title: ""
 slug: "about/index.html"
 publish: true
 ---
@@ -9,11 +9,7 @@ Hey there!
 
 <br/>
 
-Thanks for your visit!
-
-<br/>
-
-I've started this website to share thoughts and inspiring ideas about:
+I've started this website to share thoughts and ideas that inspire me about:
 
 - web development
 - cloud architecture
@@ -24,13 +20,22 @@ I've started this website to share thoughts and inspiring ideas about:
 
 ### A walk down Memory Lane
 
-I've been interested in computers since I can remember; Starting to code as a hobby when I was 14 years old.  
-I wrote a useful program for my dad with Visual Basic 4 and Microsoft SQLServer, a Geocities website full of GIFs, a few simple games, an assembler program that froze my computer, and a lot of simple programs.
-Soon after that, I found out about something called "open-source" and quickly fell in love with the idea.  
-Once, after 2 weeks of failed attempts, I was able to install my first Linux distro. It was Red Hat 4.2, and I was 16. 
-By then I dreamed about being a hacker. I loved to learn about Linux, white-hat hacking, and read stories about Captain Crunch, Dennis Ritchie, Ken Thompson, Linus Torvalds, and other heroes of the cyberpunk culture.
-At 18 I thought I needed to widen my point of view about life, so I decided to study psychology at the university. 
-But after a few years of coursing those studies, I came back into software development cause I just can't help it; I love to write software, and the creative thinking required to build simple solutions to complex problems.  
+I've been interested in computers since I can remember, starting to code as a hobby when I was 14 years old.  
+In my teenage years, I wrote several programs, among them: a Visual Basic program connected to a Microsoft SQL Server for my dad, a Geocities website full of GIFs, a few simple games, an assembler program that froze my computer, and many more useless programs.
+
+<br/>
+
+When I was 15, I read about Linux and open-source software and quickly fell in love with the idea. With a lot of effort, I was able to set up my first Linux box. It was Red Hat 4.2.  
+I dreamed about being a hacker at that time. And loved to learn about Linux, network basics, and stories about Captain Crunch and other heroes of the cyberpunk culture.  
+
+<br/>
+
+By the time I went into college I was looking for a change and tried Psychology; I learned a lot about people during those four years, before moving back to CS.
+
+<br/>
+
+Today I love to write well documented, solid code. And I am constantly challenging myself to learn about industry best practices, design patterns and DevOps tools to understand problems across multiple technical layers to plan effective solutions.  
+I'm always trying to improve my technical skills. But at the same time, I believe that the human dimension plays a key role in most technical problems, and many times, achieving effective communication and collaboration between teams can provide better returns than aiming to fix an issue from a purely technical perspective.
 
 ### I am basically, but not exclusively
 
@@ -44,4 +49,8 @@ But after a few years of coursing those studies, I came back into software devel
 
 ### Wanna talk about something?
 
-You can write to me at <ContactLink />
+Drop me a line at <ContactLink />
+
+<br/>
+
+Thanks for your visit!
